[tool.poetry]
name = "nb_cron"
version = "0.4.4" # This will be replaced by dynamic versioning
description = "Manage your crontab from the Jupyter Notebook"
authors = ["alexanghh <alexanghh@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/alexanghh/nb_cron"
repository = "https://github.com/alexanghh/nb_cron"
packages = [{include = "nb_cron"}]

[tool.poetry.dependencies]
python = ">=3.10"
notebook = ">=4.3.1"
croniter = ">=1.0.13"
python-crontab = ">=2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
coverage = "*"
coveralls = "*"
flake8 = "*"
geckodriver = "*"
requests = "*"
selenium = "*"
tornado = "*"
traitlets = "*"
PyYAML = "*"
poethepoet = "*"

[tool.poe.tasks]
test = "pytest"
build = "poetry build"
clean = "rm -rf dist"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
